@@ -55,6 +55,9 @@ ubiquity (2.11.0) UNRELEASED; urgency=low
       arguably easier to read, and works with Python 3.
     - Fix a slew of file handle leaks, including making much more liberal
       use of context managers.
+    - When creating a default username based on the user's full name, decode
+      it back to a Unicode type after running it through the
+      ascii_transliterate encoder.
   * Add Burmese translations.
   * Remove obsolete uxlaunch handling, since it's no longer used and has
     been removed from the archive.
